--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>web-engine</title>
   </head>
-  <body>
+  <body style="overflow: hidden">
     <noscript>
       <strong>We're sorry but web-engine doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
